<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonarsource.scanner.msbuild</groupId>
    <artifactId>sonar-scanner</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <groupId>org.sonarsource.scanner.msbuild</groupId>
  <artifactId>scanner-msbuild-its</artifactId>
  <name>SonarScanner for .NET</name>

  <inceptionYear>2016</inceptionYear>

  <properties>
    <maven.compiler.release>17</maven.compiler.release>
    <junit.version>5.10.2</junit.version>
    <jetty.version>11.0.18</jetty.version>
    <testInclude>**/*</testInclude>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>3.0.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.sonarsource.orchestrator</groupId>
      <artifactId>sonar-orchestrator-junit5</artifactId>
      <version>4.6.0.1748</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.sonarsource.sonarqube</groupId>
      <artifactId>sonar-ws</artifactId>
      <version>10.1.0.73491</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.25.3</version>
      <scope>test</scope>
    </dependency>
    <!-- SSL tests -->
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-server</artifactId>
      <version>${jetty.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-servlet</artifactId>
      <version>${jetty.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-proxy</artifactId>
      <version>${jetty.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>4.2.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <failIfNoTests>true</failIfNoTests>
          <!-- Display logs in AzureDevOps pipeline output -->
          <redirectTestOutputToFile>false</redirectTestOutputToFile>
          <includes>
            <include>${testInclude}</include>
          </includes>
          <properties>
            <configurationParameters>
              junit.jupiter.execution.parallel.enabled=true
              # Run different classes in parallel
              junit.jupiter.execution.parallel.mode.classes.default=concurrent
              # Run tests within a class on the same thread
              junit.jupiter.execution.parallel.mode.default=same_thread
            </configurationParameters>
          </properties>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>download-scanner-artifacts</id>
      <activation>
        <property>
          <name>scannerForMSBuild.version</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>3.6.1</version>
            <executions>
              <execution>
                <id>download-scanner</id>
                <phase>initialize</phase>
                <goals>
                  <goal>get</goal>
                </goals>
                <configuration>
                  <artifact>org.sonarsource.scanner.msbuild:sonar-scanner:${scannerForMSBuild.version}:zip:net-framework</artifact>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
